# dayplan

./: README.md  package.json
public/: index.html
src/: App.js  CalendarView.js  global.css
src-tauri/: Cargo.toml  events.json  events.json.backup  tauri.conf.json
src/components/: Events.js  HoursBG.js  TimeBar.js  Timeline.js
src/util/: notify.js  useMousePosition.js
